--- a/open-machine-learning-jupyter-book/assignments/set-up-env/second-assignment.ipynb
+++ b/open-machine-learning-jupyter-book/assignments/set-up-env/second-assignment.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -39,24 +39,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "# Your code here:\n",
     "\n",
-    "lower_cased = original_string.____\n",
-    "upper_cased = ____.upper()\n",
-    "title_cased = ____.____"
+    "lower_cased = original_string.lower()\n",
+    "upper_cased = original_string.upper()\n",
+    "title_cased = original_string.title()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "hide_input": false,
     "pycharm": {
@@ -71,6 +72,13 @@
     "assert upper_cased == 'OCADEMY IS SO COOL!'\n",
     "assert title_cased == 'Ocademy Is So Cool!'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -89,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, May 24 2022, 21:28:31) \n[Clang 13.1.6 (clang-1316.0.21.2)]"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
